    * A bug that caused a traceback when rolling back the installation
      of a group containing a post-rollback script has been corrected.
      (CNY-2844)
    * A bug that caused a traceback during metadata lookup when
      installing files to a new component has been corrected.  (CNY-2846)
    * A bug causing magic to identify almost every file as a tarfile
      has been fixed. (CNP-135)

Changes in 2.0.16:
  o Code Changes:
    * magic has been extended to identify tar archives. (CNY-2825)

  o Bug Fixes:
    * Derived packages created from an unmodified shadow now choose
      the correct binary from which to derive. (CNY-2776)
    * A bug that caused conary to traceback when formating strings in the
      syslog logger has been fixed. (CNY-2689)
    * A workaround for a bug in the standard python library that can
      prevent the display of extended debugging information has been
      added.
    * Unmodified shadows will be recognized as already present when
      promoting them to their parent branch.  Previously they would be 
      re-promoted unnecessarily. (CNY-2837)
    * conary update --test no longer executes the tagscripts associated 
      with the update. (CNY-2800)
    * Multi-stage rollbacks correctly execute the post-rollback script
      after all affected troves have been rolled back, instead of between
      stages. (CNY-2829)

  o Build Changes:
    * Info recipe actions (r.User, r.Group, and r.SupplementalGroup) are
      now available in package recipes. (CNY-2723)
    * Python packages now use %(libdir)s instead of %(prefix)s/lib for pure
      Python libraries.  This is an artifact left behind from fixing CNY-2110
      and CNP-121.
    * A bug causing log output to be lost if conary's log module was
      imported in a recipe has been fixed. (CNY-2813)

  o Server Changes:
    * Testing the HTTPS environment variable to know whether a
      connection is secure is now case-insensitive, because existing